flussonic (3.68.1)

  * DVR refactoring: new dvr2 storage
  * admin panel is accessed via /admin

flussonic (3.67.5)

  * RTSP now can consume frames with ADTS and AnnexB
  * Correctly handles such broken urls like /chan0/archive/1359421400/manifest.f4m

flussonic (3.67.4)

  * fixes in RTSP protocol reader.  It uses stateless parser now

flussonic (3.67.3)

  * flu_stream requests source only after hls dvr startup
  * better debug in hls_dvr packetizer

flussonic (3.67.2)

  * Fixes in RTSP path generation EV:25214

flussonic (3.67.1)

  * New licensing system

flussonic (3.66.5)

  * Added mpegts http basic authentication

flussonic (3.66.4)

  * Added all interfaces to traffic pulse
  * New RTSP reader code

flussonic (3.66.3)

  * Added disk index to archive files for fast load
  * Admin page now can be protected with password
  * Reconfigure doesn't stop HTTP acceptor anymore
  * Proper handling of invalid config: better log on start and refuse to reconfigure

flussonic (3.66.2)

  * Mpegts handler disconnects old connection with same user_id. EV:25120
  * Fixed bug with mp4 last gop. EV:25123

flussonic (3.66.1)

  * initial commit for publishing video via mpegts_handler
  * remove source of flu_stream
  * show traffic in admin panel
  * collect traffic statistics to pulse subsystem
  * switch to lager logging with new log layout

flussonic (3.65.7)

  * fixed monotonic RTMP frame sending
  * start RTMP stream from keyframe
  * API to restart stream via HTTP
  * frames reordering in RTSP reader


flussonic (3.65.6)

  * timeshift:// fix for handling broken archive files


flussonic (3.65.5)

  * change output stream if input stream is changing (audio added, etc.)
  * mpegts_handler now doesn't stop and sends null-packets
  * fixed bug when flu_rtmp playing started invalid stream names
  * stream now doesn't die directly after publisher exits
  * added timeshift:// source type
  * visualize clearing DVR in admin panel