@@ -1,7 +1,6 @@
 Документация
 ------------
 
-* Пароль на публикацию по RTMP один на префикс
 * Добавить про flv publish??
 * Рассказать про структуру rtmp урлов
 * Рассказать про захват видео
