@@ -3,12 +3,12 @@
 
 
 -behaviour(cowboy_http_handler).
--export([init/3, handle/2, terminate/2]).
+-export([init/3, handle/2, terminate/3]).
 
 init({_Any,http}, Req, Opts) ->
   {ok, Req, Opts}.
 
-terminate(_, _) ->
+terminate(_,_, _) ->
   ok.
 
 
