@@ -50,53 +50,34 @@ media_handler_test_() ->
 test_lookup_by_path(Path) -> catch test_lookup_by_path0(Path).
 
 test_lookup_by_path0(Path) when is_list(Path) -> test_lookup_by_path0(list_to_binary(Path));
-test_lookup_by_path0(<<"/", Path/binary>>) -> test_lookup_by_path0(Path);
-test_lookup_by_path0(Path1) when is_binary(Path1) ->
+test_lookup_by_path0(<<"/",_/binary>> = Path1) ->
   Routes = flu_config:parse_routes(flu_config:get_config()),
+  Dispatch = cowboy_router:compile([{'_', Routes}]),
   {Path,Query} = case binary:split(Path1, <<"?">>) of
     [P,Q] -> {P,Q};
     [P] -> {P,<<"">>}
   end,
-  {Options, PathInfo} = try select_route(Routes, binary:split(Path, <<"/">>, [global]))
-  catch throw:{no_route_found,PI} -> throw({no_route_found,flu_config:get_config(),Routes,PI})
-  end,
-  Req = cowboy_req:new(socket, fake_inet, <<"GET">>, Path, Query, <<>>, {1,1},
-    [{<<"x-real-ip">>,<<"127.0.0.1">>}], <<"erlyvideo">>, 9090, <<>>, false, undefined),
+  % {Options, PathInfo} = try select_route(Routes, binary:split(Path, <<"/">>, [global]))
+  % catch throw:{no_route_found,PI} -> throw({no_route_found,flu_config:get_config(),Routes,PI})
+  % end,
+  Req1 = cowboy_req:new(socket, fake_inet, <<"GET">>, Path, Query, <<>>, {1,1},
+    [{<<"x-real-ip">>,<<"127.0.0.1">>}], <<"erlyvideo">>, 9090, <<>>, false, undefined, undefined),
+  {ok, Req2, Env} = cowboy_router:execute(Req1, [{dispatch,Dispatch}]),
 
-  media_handler:lookup_name(PathInfo, Options, Req, []).
+  {handler,media_handler} = lists:keyfind(handler,1,Env),
+  {_,Options} = lists:keyfind(handler_opts,1,Env),
+  PathInfo = cowboy_req:get(path_info,Req2),
 
-select_route([{Prefix, _, Options}|Routes], PathInfo) ->
-  case try_prefix(Prefix, PathInfo) of
-    false ->
-      select_route(Routes, PathInfo);
-    PI1 ->
-      {Options, PI1}
-  end;
+  media_handler:lookup_name(PathInfo, Options, Req2, []);
 
-select_route([], PathInfo) -> throw({no_route_found, PathInfo}).
+test_lookup_by_path0(Path) ->
+  test_lookup_by_path0(<<"/", Path/binary>>).
 
-
-try_prefix([P|P1], [P|P2]) -> try_prefix(P1, P2);
-try_prefix(['...'], P2) -> P2;
-try_prefix([], []) -> [];
-try_prefix(_, _) -> false.
 
 set_config(Config) ->
   {ok, Config2} = flu_config:parse_config(Config, undefined),
   meck:expect(flu_config, get_config, fun() -> Config2 end).
 
-try_prefix_test_() ->
-  [?_assertEqual(false, try_prefix([<<"l1">>], [<<"l2">>])),
-  ?_assertEqual(false, try_prefix([<<"l1">>], [<<"l1">>,<<"l2">>])),
-  ?_assertEqual([<<"l2">>], try_prefix([<<"l1">>, '...'], [<<"l1">>,<<"l2">>])),
-  ?_assertEqual([], try_prefix([<<"l1">>, <<"l2">>], [<<"l1">>,<<"l2">>]))
-  ].
-
-select_route_test_() ->
-  [?_assertEqual({options1, []}, select_route([{[<<"l1">>],h, options1}], [<<"l1">>])),
-  ?_assertEqual({options1, [<<"l2">>]}, select_route([{[<<"l1">>, '...'],h, options1}, {[<<"l1">>,<<"l2">>],h, options2}], [<<"l1">>, <<"l2">>])),
-  ?_assertEqual({options2, []}, select_route([{[<<"l1">>,<<"l2">>],h, options2}, {[<<"l1">>, '...'],h, options1}], [<<"l1">>, <<"l2">>]))
-  ].
 
 test_offline_stream_playlist() ->
   set_config([{stream, "livestream", "fake://url", [{dvr, <<"test/files">>}]}]),
