@@ -22,8 +22,8 @@
   {erlydtl, ".*", {git, "git://github.com/evanmiller/erlydtl.git", "2ef2f7d3b4"}},
   {parsexml, ".*", {git, "git://github.com/maxlapshin/parsexml.git", "264da95bfa"}},
   {meck, ".*", {git, "git://github.com/eproxus/meck.git", "beb8d14e59"}},
-  {lager, ".*", {git, "https://github.com/basho/lager", "e74924208"}},
-  {ranch,    ".*", {git, "git://github.com/extend/ranch.git", "c3133bfbc3"}},
-  {cowboy,    ".*", {git, "git://github.com/extend/cowboy.git", "d3277b08ce"}},
-  {mimetypes, ".*", {git, "git://github.com/spawngrid/mimetypes.git", {tag, "0.9"}}}
+  {lager, ".*", {git, "https://github.com/basho/lager", {tag,"1.2.2"}}},
+  {ranch,    ".*", {git, "git://github.com/extend/ranch.git", {tag,"0.6.1"}}},
+  {cowboy,    ".*", {git, "git://github.com/extend/cowboy.git", "855e9652fa"}},
+  {mimetypes, ".*", {git, "git://github.com/spawngrid/mimetypes.git", {tag, "1.0"}}}
 ]}.
